# sirius-deploy-test

./: Anchor.toml  LICENSE  README.md
programs/sirius-deploy-test/: Cargo.toml
programs/sirius-deploy-test/src/: lib.rs
tests/: sirius-deploy-test.ts
